log/build_2020-11-24_15-16-24/image_converter/stderr.log
  File "/home/iic/conversion/install/image_converter/lib/python3.6/site-packages/image_converter/convert.py", line 45
    if self.to_convert == "mono8" or :
                                     ^
SyntaxError: invalid syntax

